--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "cookie-parser": "^1.4.4",
     "css-loader": "^3.4.2",
@@ -24,6 +25,7 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-standard": "^4.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.2",
