--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-standard": "^4.0.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.2",
     "now": "^16.7.3",
     "now-cli": "0.0.0",
+    "npm": "^6.13.6",
     "prop-types": "^15.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
