--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-fetch-ssr": "^3.0.5",
